--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Ilze Rieba portfolio"
+      content="Ilze Rieba is a Front-end Developer based in Portugal and UK. This is her portfolio website."
     />
     <link rel="" href="" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +23,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Ilze Rieba Portfolio</title>
+    <title>Ilze Rieba Front-end Developer Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
