--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -16,6 +17,7 @@
  <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1:wght@100;300;400;500;600;700&family=Montserrat:ital,wght@0,100;0,400;0,500;1,300&display=swap" rel="stylesheet">
+    <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
 
 <!--
       manifest.json provides metadata used when your web app is installed on a
