--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,6 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js" crossorigin></script>
-
 <script
   src="https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js"
   crossorigin></script>
@@ -33,6 +32,7 @@
 <script
   src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
   crossorigin></script>
+<script src="https://kit.fontawesome.com/baff265486.js" crossorigin="anonymous"></script>
 
 <script>var Alert = ReactBootstrap.Alert;</script>
 
