--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,9 @@
       content="Ilze Rieba is a Front-end Developer based in Portugal and UK. This is her portfolio website."
     />
     <link rel="" href="" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=M+PLUS+1:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
- <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=M+PLUS+1:wght@100;300;400;500;600;700&family=Montserrat:ital,wght@0,100;0,400;0,500;1,300&display=swap" rel="stylesheet">
-    <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
+<link href="https://fonts.googleapis.com/css2?family=M+PLUS+1:wght@100;300;400;500;600;700&family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300&display=swap" rel="stylesheet">
 
 <!--
       manifest.json provides metadata used when your web app is installed on a
