--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 
 <script>var Alert = ReactBootstrap.Alert;</script>
 
-    <title>Ilze Rieba Website</title>
+    <title>Ocean Waves Therapy</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
