--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Ilze Rieba is a Front-end Developer based in Portugal and UK. This is her portfolio website."
+      content="Somatic Trauma Informed Counselling"
     />
     <link rel="" href="" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
